--- a/location.html
+++ b/location.html
@@ -35,38 +35,107 @@
       <ul class="lang-menu" id="langMenu"></ul>
     </div>
   </nav>
+<button class="burger" id="burgerBtn">&#9776;</button>
 
-<button class="burger" id="burgerBtn">&#9776;</button> <!-- Hamburger icon -->
-<button class="close-menu" id="closeMenu">&times;</button>
 </header>
 
 <!-- TITLE BELOW NAV -->
-<section class="page-title">
-  <h1>Explore the history of Budapest</h1>
-</section>
+<main>
 
-<h2 class="info-heading">Choosing The Right Spot</h2>
+  <!-- HERO TITLE -->
+  <section class="hero">
+    <h1>Explore the<br>history of Budapest</h1>
+  </section>
 
-<div class="section-one">
- <p class="info">Mihály Kolodko places his mini-statues in locations that add meaning, humor, or a small story to the sculpture. He looks for spots where the surroundings can enhance the character—whether through a symbolic link, a cultural reference, or a playful twist.</p>
-<img src="">
-<img src="">
-<p>Kolodko places his mini-statues in everyday public spaces like railings, bridges, and benches, turning discovery into part of the experience. The figures often interact with their surroundings, making them feel naturally connected to the city. Their locations reflect local history or Hungarian culture, encouraging people to notice overlooked details and view familiar places with fresh curiosity.</p>
-</div>
+  <!-- WHO CREATED THEM -->
+  <section class="creator-section">
+    <div class="creator-grid">
 
-<h1 class="info-heading">List of values</h1>
+      <div class="creator-text">
+        <h2>Who created them?</h2>
+        <p>
+          Mihály Kolodko is a Ukrainian-born sculptor living in Hungary.
+          His tiny statues mix humor, political commentary, and pop culture
+          references. Some were installed illegally at first—now they’re
+          one of the city’s most beloved features.
+        </p>
+      </div>
+
+      <div class="creator-images">
+        <img src="images/creator1.png" class="img-large">
+        <img src="images/creator2.png" class="img-small">
+      </div>
+
+    </div>
+  </section>
+
+  <!-- LIST OF STATUES -->
+  <section class="statues-section">
+
+    <div class="statues-header">
+      <div class="statues-title">
+        <h2>List of statues</h2>
+        <div class="search-filter">
+        <input type="text" placeholder="Look for statue">
+        <button class="filter-btn">⚲</button>
+      </div>
+    </div>
+ </div>
+     
+    <div class="statues-grid">
+
+      <div class="statue-card">
+        <img src="images/skater.png">
+        <div class="card-footer">
+          <span>Among us</span>
+          <button>Info</button>
+        </div>
+      </div>
+
+      <div class="statue-card">
+        <img src="images/dracula.png">
+        <div class="card-footer">
+          <span>Dracula</span>
+          <button>Info</button>
+        </div>
+      </div>
+
+      <div class="statue-card">
+        <img src="images/hannna.png">
+        <div class="card-footer">
+          <span>Hanna Szenes</span>
+          <button>Info</button>
+        </div>
+      </div>
+
+      <div class="statue-card">
+        <img src="images/noahs.png">
+        <div class="card-footer">
+          <span>Noah’s Ark</span>
+          <button>Info</button>
+        </div>
+      </div>
+
+    </div>
+
+    <a href="#" class="show-more">show more</a>
+
+  </section>
+
+</main>
+
 
 <footer class="footer">
   <div class="footer-left">
-    <div class="footer-logo">
       <img class="footer-logo" src="images/BigWhiteLogo.png" alt="Art in Disguise logo">
+
+
       <div class="social-media">
         <img src="images/insta.png" alt="instagram logo">
         <img src="images/facebook.png" alt="facebook logo">
         <img src="images/tiktok.png" alt="tiktok logo">
-      </div>
-    </div>
   </div>
+        </div>
 
   <div class="footer-right">
     <h3>Pages</h3>
