--- a/statues.html
+++ b/statues.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home page</title>
-  <link rel="stylesheet" href="location.css" />
+  <link rel="stylesheet" href="statues.css" />
 </head>
 
 <body>
@@ -19,8 +19,8 @@
   <nav class="nav">
     <ul class="nav-links">
       <li data-key="home">Home</li>
-      <li data-key="statues"><a href="statues.html" style="color: inherit; text-decoration: none;">Statues</a></li>
-      <li data-key="location">Location</li>
+      <li data-key="statues">Statues</li>
+      <li data-key="location"><a href="location.html" style="color: inherit; text-decoration: none;">Location</a></li>
       <li data-key="map">Map</li>
       <li data-key="list">List</li>
     </ul>
@@ -44,7 +44,7 @@
 
   <!-- HERO TITLE -->
   <section class="hero">
-    <h1>Budapest Through<br>Its Places</h1>
+    <h1>Explore the<br>history of Budapest</h1>
   </section>
 
   <!-- WHO CREATED THEM -->
@@ -52,39 +52,20 @@
     <div class="creator-grid">
 
       <div class="creator-text">
-        <h2>Choosing the Right Spot</h2>
+        <h2>Who created them?</h2>
         <p>
-        Mihály Kolodko places his mini-statues in locations that add meaning, humor,
-        or a small story to the sculpture. He looks for spots where the surroundings 
-        can enhance the character—whether through a symbolic link, 
-        a cultural reference, or a playful twist.
+          Mihály Kolodko is a Ukrainian-born sculptor living in Hungary.
+          His tiny statues mix humor, political commentary, and pop culture
+          references. Some were installed illegally at first—now they’re
+          one of the city’s most beloved features.
         </p>
       </div>
 
       <div class="creator-images">
-        <img src="images/locationCreator.png" class="img-large">
-        <img src="images/locPeople.png" class="img-small">
+        <img src="images/creator1.png" class="img-large">
+        <img src="images/creator2.png" class="img-small">
       </div>
 
-    </div>
-    <div class="creator-grid reverse-grid">
-     <div class="creator-images">
-        <img src="images/dokStatue.png" class="img-large">
-        <img src="images/dokStatue2.png" class="img-small">
-      </div>
-
-     <div class="creator-text">
-        <p>
-        He places his mini-statues in everyday public spots like railings, bridges, 
-        and benches—areas people often overlook. This makes discovery part of the experience.
-        Many of the figures “interact” with their surroundings, 
-        such as sitting on a ledge or looking over water, so they feel naturally connected to the city.
-        Kolodko’s locations often reflect local history or Hungarian culture, always with a playful touch. 
-        By choosing subtle and accessible places, he encourages people to notice small details and see 
-        familiar areas with renewed curiosity.
-        </p>
-      </div>
-    </div>
     </div>
   </section>
 
@@ -93,9 +74,9 @@
 
     <div class="statues-header">
       <div class="statues-title">
-        <h2>List of locations</h2>
+        <h2>List of statues</h2>
         <div class="search-filter">
-        <input type="text" placeholder="Look for location">
+        <input type="text" placeholder="Look for statue">
         <button class="filter-btn">⚲</button>
       </div>
     </div>
@@ -104,33 +85,33 @@
     <div class="statues-grid">
 
       <div class="statue-card">
-        <img src="images/castle.png">
+        <img src="images/skater.png">
         <div class="card-footer">
-          <span>Vajdahunyad Castle  </span>
+          <span>Among us</span>
           <button>Info</button>
         </div>
       </div>
 
       <div class="statue-card">
-        <img src="images/hannaPark.png">
+        <img src="images/dracula.png">
         <div class="card-footer">
-          <span>Szenes Hanna park</span>
+          <span>Dracula</span>
           <button>Info</button>
         </div>
       </div>
 
       <div class="statue-card">
-        <img src="images/PestiBuilding.png">
+        <img src="images/hannna.png">
         <div class="card-footer">
-          <span>Pesti Magyar Színház.</span>
+          <span>Hanna Szenes</span>
           <button>Info</button>
         </div>
       </div>
 
       <div class="statue-card">
-        <img src="images/SquirePark.png">
+        <img src="images/noahs.png">
         <div class="card-footer">
-          <span>Bethlen Gábor square</span>
+          <span>Noah’s Ark</span>
           <button>Info</button>
         </div>
       </div>
@@ -159,7 +140,7 @@
   <div class="footer-right">
     <h3>Pages</h3>
     <p>Home</p>
-    <p><a href="statues.html" style="color: inherit; text-decoration: none;">Statues</a></p>
+    <p>Statues</p>
     <p><a href="location.html" style="color: inherit; text-decoration: none;">Location</a></p>
     <p>Map</p>
     <p>List</p>
@@ -167,7 +148,7 @@
 </footer>
 
 
-<script src="location.js"></script>
+<script src="statues.js"></script>
 
 </body>
 </html>
