--- a/specificLocation.html
+++ b/specificLocation.html
@@ -11,6 +11,7 @@
 
 <header class="navbar">
   <!-- LOGO -->
+   
   <div class="logo">
     <img src="images/BigBlackLogo.png" alt="Art in Disguise logo">
   </div>
@@ -18,11 +19,11 @@
   <!-- NAVIGATION -->
   <nav class="nav">
     <ul class="nav-links">
-      <li data-key="home">Home</li>
-      <li data-key="statues"><a href="statues.html" style="color: inherit; text-decoration: none;">Statues</a></li>
-      <li data-key="location">Location</li>
-      <li data-key="map">Map</li>
-      <li data-key="list">List</li>
+      <li data-i18n="home">Home</li>
+      <li data-i18n="statues"><a href="statues.html" style="color: inherit; text-decoration: none;">Statues</a></li>
+      <li data-i18n="location">Location</li>
+      <li data-i18n="map">Map</li>
+      <li data-i18n="list">List</li>
     </ul>
 
     <!-- LANGUAGE DROPDOWN (now inside nav) -->
@@ -38,6 +39,7 @@
 <button class="burger" id="burgerBtn">&#9776;</button>
 
 </header>
+<a href="location.html"  style="color: inherit; text-decoration: none;"><button class="back-btn">←</button></a>
 
 <main class="location-page">
 
@@ -49,29 +51,29 @@
     </div>
 
     <div class="hero-info">
-      <h1>Vajdahunyad Castle</h1>
-      <p class="meta">Location: City Park</p>
+      <h1 data-i18n="castle_title">Vajdahunyad Castle</h1>
+      <p class="meta" data-i18n="castle_location">Location: City Park</p>
 
       <div class="rating">
-        <p>Accessibility ★★★★☆ </p>
+        <p data-i18n="accessibility">Accessibility ★★★★☆ </p>
       </div>
 
-      <p class="statue">Statues here: Dracula</p>
-      <a href="#" class="read-more">Read more →</a>
+      <p class="statue" data-i18n="statues_here">Statues here: Dracula</p>
+      <a href="#" class="read-more" data-i18n="read_more">Read more →</a>
     </div>
   </section>
 
   <!-- TABS -->
   <section class="tabs">
-    <button class="tab active">History</button>
-    <button class="tab">Gallery</button>
+    <button class="tab active" data-i18n="history">History</button>
+    <button class="tab" data-i18n="gallery">Gallery</button>
   </section>
 
   <!-- CONTENT -->
   <section class="location-content">
     <div class="text-block top-text">
-      <h2>Vajdahunyad Castle</h2>
-      <p>
+      <h2 data-i18n="castle_title">Vajdahunyad Castle</h2>
+      <p data-i18n="castle_description">
        Vajdahunyad Castle is a unique architectural landmark 
        originally built in 1896 for Hungary’s Millennium
         Exhibition. It’s not a single castle style — 
@@ -86,8 +88,8 @@
     </div>
 
     <div class="text-block mid-text">
-      <h3>Significance of the placement</h3>
-      <p>
+      <h3 data-i18n="significance">Significance of the placement</h3>
+      <p data-i18n="placement_description">
         Kolodko often chooses locations that create a playful connection between story and place.  By setting Dracula beside a castle in the heart of the park, he ties together folklore, architecture, and humor.  Its placement encourages people to explore, slow down, and discover artworks they would otherwise walk past.
       </p>
     </div>
@@ -95,7 +97,7 @@
       <img src="images/moreBuil.png" alt="more building image">
     </div>
     <div class="text-block bottom-text">
-      <p>
+      <p data-i18n="placement_text">
          Mihály Kolodko’s miniature statue placed here playfully reflects this rich historical layering, creating a dialogue between monumental national history and contemporary street art. Its discreet placement encourages close observation and reminds visitors that history can be discovered not only in grand forms, but also in small, unexpected details.
       </p>
     </div>
@@ -103,6 +105,7 @@
     <div class="image-block bottom-image">
       <img src="images/BuilStatu.png" alt="statue of dracula in front of vajdahunyad castle">
     </div>
+
   </section>
 
 </main>
@@ -123,12 +126,12 @@
         </div>
 
   <div class="footer-right">
-    <h3>Pages</h3>
-    <p>Home</p>
-    <p><a href="statues.html" style="color: inherit; text-decoration: none;">Statues</a></p>
-    <p><a href="location.html" style="color: inherit; text-decoration: none;">Location</a></p>
-    <p>Map</p>
-    <p>List</p>
+    <h3 data-i18n="pages">Pages</h3>
+    <p data-i18n="home">Home</p>
+    <p><a href="statues.html" style="color: inherit; text-decoration: none;" data-i18n="statues">Statues</a></p>
+    <p><a href="location.html" style="color: inherit; text-decoration: none;" data-i18n="location">Location</a></p>
+    <p data-i18n="map">Map</p>
+    <p data-i18n="list">List</p>
   </div>
 </footer>
 
