--- a/statues.html
+++ b/statues.html
@@ -18,11 +18,11 @@
   <!-- NAVIGATION -->
   <nav class="nav">
     <ul class="nav-links">
-      <li data-key="home">Home</li>
-      <li data-key="statues">Statues</li>
-      <li data-key="location"><a href="location.html" style="color: inherit; text-decoration: none;">Location</a></li>
-      <li data-key="map">Map</li>
-      <li data-key="list">List</li>
+      <li data-i18n="home">Home</li>
+      <li data-i18n="statues">Statues</li>
+      <li data-i18n="location"><a href="location.html" style="color: inherit; text-decoration: none;">Location</a></li>
+      <li data-i18n="map">Map</li>
+      <li data-i18n="list">List</li>
     </ul>
 
     <!-- LANGUAGE DROPDOWN (now inside nav) -->
@@ -44,7 +44,7 @@
 
   <!-- HERO TITLE -->
   <section class="hero">
-    <h1>Explore the<br>history of Budapest</h1>
+    <h1 data-i18n="statues_hero_title">Explore the<br>history of Budapest</h1>
   </section>
 
   <!-- WHO CREATED THEM -->
@@ -52,8 +52,8 @@
     <div class="creator-grid">
 
       <div class="creator-text">
-        <h2>Who created them?</h2>
-        <p>
+        <h2 data-i18n="creator_title">Who created them?</h2>
+        <p data-i18n="creator_text">
           Mihály Kolodko is a Ukrainian-born sculptor living in Hungary.
           His tiny statues mix humor, political commentary, and pop culture
           references. Some were installed illegally at first—now they’re
@@ -74,10 +74,12 @@
 
     <div class="statues-header">
       <div class="statues-title">
-        <h2>List of statues</h2>
+        <h2 data-i18n="statue_list_title">List of statues</h2>
         <div class="search-filter">
-        <input type="text" placeholder="Look for statue">
-        <button class="filter-btn">⚲</button>
+        <input type="text"
+        data-i18n-placeholder="search_placeholder"
+        placeholder="Look for statue">
+        <button class="filter-btn" data-i18n="filter_btn">⚲</button>
       </div>
     </div>
  </div>
@@ -87,38 +89,38 @@
       <div class="statue-card">
         <img src="images/skater.png">
         <div class="card-footer">
-          <span>Among us</span>
-          <button>Info</button>
+          <span data-i18n="statue_among_us">Among us</span>
+          <button data-i18n="info">Info</button>
         </div>
       </div>
 
       <div class="statue-card">
         <img src="images/dracula.png">
         <div class="card-footer">
-          <span>Dracula</span>
-          <button>Info</button>
+          <span data-i18n="statue_dracula">Dracula</span>
+          <button data-i18n="info">Info</button>
         </div>
       </div>
 
       <div class="statue-card">
         <img src="images/hannna.png">
         <div class="card-footer">
-          <span>Hanna Szenes</span>
-          <button>Info</button>
+          <span data-i18n="statue_hanna">Hanna Szenes</span>
+          <button data-i18n="info">Info</button>
         </div>
       </div>
 
       <div class="statue-card">
         <img src="images/noahs.png">
         <div class="card-footer">
-          <span>Noah’s Ark</span>
-          <button>Info</button>
+          <span data-i18n="statue_noah">Noah’s Ark</span>
+          <button data-i18n="info">Info</button>
         </div>
       </div>
 
     </div>
 
-    <a href="#" class="show-more">show more</a>
+    <a href="#" class="show-more" data-i18n="show-more">show more</a>
 
   </section>
 
@@ -138,12 +140,12 @@
         </div>
 
   <div class="footer-right">
-    <h3>Pages</h3>
-    <p>Home</p>
-    <p>Statues</p>
-    <p><a href="location.html" style="color: inherit; text-decoration: none;">Location</a></p>
-    <p>Map</p>
-    <p>List</p>
+    <h3 data-i18n="pages">Pages</h3>
+    <p data-i18n="home">Home</p>
+    <p data-i18n="statues">Statues</p>
+    <p><a href="location.html" style="color: inherit; text-decoration: none;" data-i18n="location">Location</a></p>
+    <p data-i18n="map">Map</p>
+    <p data-i18n="list">List</p>
   </div>
 </footer>
 
