--- a/homePage.html
+++ b/homePage.html
@@ -18,9 +18,9 @@
   <!-- NAVIGATION -->
   <nav class="nav">
     <ul class="nav-links">
-      <li data-i18n="home">Home</li>
-      <li data-i18n="statues"><a href="statues.html" style="color: inherit; text-decoration: none;">Statues</a></li>
-      <li data-i18n="location">Location</li>
+      <a href="homePage.html"  style="color: inherit; text-decoration: none;"><li data-i18n="home">Home</li></a>
+      <a href="statues.html"  style="color: inherit; text-decoration: none;"><li data-i18n="statues">Statues</li></a>
+      <a href="location.html"  style="color: inherit; text-decoration: none;"><li data-i18n="location">Location</li></a>
       <li data-i18n="map">Map</li>
       <li data-i18n="list">List</li>
     </ul>
@@ -85,7 +85,7 @@
   <section class="statues-home">
     <div class="statues-header">
       <h2 data-i18n="statues">Statues</h2>
-      <a href="statues.html" data-i18n="see_more">See more →</a>
+      <a href="statues.html" data-i18n="see_more"  style="color: inherit; text-decoration: none;">See more →</a>
     </div>
 
     <div class="statues-grid">
@@ -94,7 +94,7 @@
         <p data-i18n="dead_squirrel">Dead Squirrel</p>
       </div>
       <div class="statue-card dracula">
-        <img src="images/statue4.png">
+        <a href="specificLocation.html"><img src="images/statue4.png"></a>
         <p data-i18n="dracula">Dracula</p>
       </div>
       <div class="statue-card hanna">
@@ -114,7 +114,7 @@
 
     <div class="explore-grid">
       <div class="explore-item build">
-        <img src="images/explore1.png">
+        <a href="location.html"  style="color: inherit; text-decoration: none;"><img src="images/explore1.png"></a>
         <p data-i18n="explore_locations">Learn more about the statues locations</p>
       </div>
       <div class="explore-item map">
