--- a/statues.html
+++ b/statues.html
@@ -12,15 +12,15 @@
 <header class="navbar">
   <!-- LOGO -->
   <div class="logo">
-    <img src="images/BigBlackLogo.png" alt="Art in Disguise logo">
+    <a href="homePage.html"><img src="images/BigBlackLogo.png" alt="Art in Disguise logo"></a>
   </div>
 
   <!-- NAVIGATION -->
   <nav class="nav">
     <ul class="nav-links">
-      <li data-i18n="home">Home</li>
-      <li data-i18n="statues">Statues</li>
-      <li data-i18n="location"><a href="location.html" style="color: inherit; text-decoration: none;">Location</a></li>
+      <a href="homePage.html" style="color: inherit; text-decoration: none;"><li data-i18n="home">Home</li></a>
+      <a href="statues.html" style="color: inherit; text-decoration: none;"><li data-i18n="statues">Statues</li></a>
+      <a href="location.html" style="color: inherit; text-decoration: none;"><li data-i18n="location">Location</li></a>
       <li data-i18n="map">Map</li>
       <li data-i18n="list">List</li>
     </ul>
@@ -129,7 +129,7 @@
 
 <footer class="footer">
   <div class="footer-left">
-      <img class="footer-logo" src="images/BigWhiteLogo.png" alt="Art in Disguise logo">
+      <a href="homePage.html"><img class="footer-logo" src="images/BigWhiteLogo.png" alt="Art in Disguise logo"></a>
 
 
       <div class="social-media">
@@ -141,8 +141,8 @@
 
   <div class="footer-right">
     <h3 data-i18n="pages">Pages</h3>
-    <p data-i18n="home">Home</p>
-    <p data-i18n="statues">Statues</p>
+    <p data-i18n="home"><a href="homePage.html" style="color: inherit; text-decoration: none;">Home</a></p>
+    <p data-i18n="statues"><a href="statues.html" style="color: inherit; text-decoration: none;">Statues</a></p>
     <p><a href="location.html" style="color: inherit; text-decoration: none;" data-i18n="location">Location</a></p>
     <p data-i18n="map">Map</p>
     <p data-i18n="list">List</p>
