--- a/location.html
+++ b/location.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explore Budapest through small statues and less known locations.">
+  <meta name="keywords" content="statues, Budapest, art, locations, history, guide">
+  <meta name="author" content="Art in Disguise">
   <title>Home page</title>
   <link rel="stylesheet" href="location.css" />
 </head>
@@ -22,7 +25,7 @@
       <a href="statues.html" style="color: inherit; text-decoration: none;"><li data-i18n="statues">Statues</li></a>
       <a href="location.html" style="color: inherit; text-decoration: none;"><li data-i18n="location">Location</li></a>
       <li data-i18n="map">Map</li>
-    <li data-i18n="list">List</li>
+    <li data-i18n="list">My List</li>
     </ul>
 
     <!-- LANGUAGE DROPDOWN (now inside nav) -->
@@ -108,7 +111,8 @@
       <div class="statue-card">
         <a href="specificLocation.html"><img src="images/castle.png"></a>
         <div class="card-footer">
-          <span data-i18n="vajdahunyad_castle">Vajdahunyad Castle  </span>
+          <span data-i18n="vajdahunyad_castle">Vajdahunyad Castle</span>
+            <span class="statue-name" data-i18n="dracula">Dracula</span>
           <a href="specificLocation.html"> <button class="infoButton">Info</button></a>
          
         </div>
@@ -117,7 +121,8 @@
       <div class="statue-card">
         <img src="images/hannaPark.png">
         <div class="card-footer">
-          <span data-i18n="szenes_park">Szenes Hanna park</span>
+          <span data-i18n="szenes_park">Szenes Hanna park </span>
+            <span class="statue-name" data-i18n="hanna">Hanna Szenes</span>
           <button data-i18n="info">Info</button>
         </div>
       </div>
@@ -125,7 +130,8 @@
       <div class="statue-card">
         <img src="images/PestiBuilding.png">
         <div class="card-footer">
-          <span data-i18n="pesti_theatre">Pesti Magyar Színház.</span>
+          <span data-i18n="pesti_theatre">Pesti Magyar Színház</span>
+            <span class="statue-name" data-i18n="car">14-Carat Roadster</span>
           <button data-i18n="info">Info</button>
         </div>
       </div>
@@ -134,6 +140,7 @@
         <img src="images/SquirePark.png">
         <div class="card-footer">
           <span  data-i18n="bethlen_square">Bethlen Gábor square</span>
+          <span class="statue-name" data-i18n="noahs_ark">Noah’s ark</span>
           <button data-i18n="info">Info</button>
         </div>
       </div>
@@ -165,7 +172,7 @@
     <p><a href="statues.html" style="color: inherit; text-decoration: none;" data-i18n="statues">Statues</a></p>
     <p><a href="location.html" style="color: inherit; text-decoration: none;" data-i18n="location">Location</a></p>
     <p data-i18n="map">Map</p>
-    <p data-i18n="list">List</p>
+    <p data-i18n="list">My List</p>
   </div>
 </footer>
 
