--- a/statues.html
+++ b/statues.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explore Budapest through small statues and less known locations.">
+  <meta name="keywords" content="statues, Budapest, art, locations, history, guide">
+  <meta name="author" content="Art in Disguise">
   <title>Home page</title>
   <link rel="stylesheet" href="statues.css" />
 </head>
@@ -22,7 +25,7 @@
       <a href="statues.html" style="color: inherit; text-decoration: none;"><li data-i18n="statues">Statues</li></a>
       <a href="location.html" style="color: inherit; text-decoration: none;"><li data-i18n="location">Location</li></a>
       <li data-i18n="map">Map</li>
-      <li data-i18n="list">List</li>
+      <li data-i18n="list">My List</li>
     </ul>
 
     <!-- LANGUAGE DROPDOWN (now inside nav) -->
@@ -145,7 +148,7 @@
     <p data-i18n="statues"><a href="statues.html" style="color: inherit; text-decoration: none;">Statues</a></p>
     <p><a href="location.html" style="color: inherit; text-decoration: none;" data-i18n="location">Location</a></p>
     <p data-i18n="map">Map</p>
-    <p data-i18n="list">List</p>
+    <p data-i18n="list">My List</p>
   </div>
 </footer>
 
